-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.1
-
Windows 7
-
d236c5a8a34803bda6115956184398b99dbba408
Setting the zoom factor before the page is loaded will not have any effect
- relates to
-
QTBUG-51969 WebEngineView's zoomFactor property doesn't work
-
- Closed
-
-
QTBUG-101914 qwebengineview zoomfactor was reset to 1.0
-
- Closed
-
-
QTBUG-51992 QtWebEngine setZoomFactor has no effect
-
- Closed
-
| For Gerrit Dashboard: QTBUG-51851 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 153572,11 | Use the temporary zoom factor to set the zoom factor | 5.6 | qt/qtwebengine | Status: MERGED | +2 | 0 |