Use the temporary zoom factor to set the zoom factor

It turns out that using the temporary zoom factor is meant to set
the zoom factor for one certain view, and this is actually what we
want.

Also added auto tests for this.

Task-number: QTBUG-51851
Task-number: QTBUG-51969
Change-Id: I8912cbc25637d3c1681026380a2ab3068a964868
Reviewed-by: Michal Klocek <michal.klocek@theqtcompany.com>